respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Cred_Cifid__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usuario__c</fullName>
        <label>Usuario</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cifid</label>
</CustomObject>